# backend/src/datasets/dto/upload-file.dto.ts
@@ -1,0 +1,20 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class UploadFileDto {
+  @ApiProperty({
+    description: 'The name of the file to upload',
+    example: 'image.jpg',
+  })
+  @IsString()
+  @IsNotEmpty()
+  fileName: string;
+
+  @ApiProperty({
+    description: 'The MIME type of the file',
+    example: 'image/jpeg',
+  })
+  @IsString()
+  @IsNotEmpty()
+  contentType: string;
+}
