# backend/src/datasets/entities/dataset.entity.ts
@@ -1,0 +1,9 @@
+import { Dataset } from '@prisma/client';
+
+export class DatasetEntity implements Dataset {
+  id: string;
+  projectId: string;
+  version: number;
+  createdAt: Date;
+  updatedAt: Date;
+}
